--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Proyecta-T</title>
 </head>
 <body>
+  <!--Nav bar-->
  <nav class="navbar navbar-expand-lg bg-warning">
     <div class="container">
         <a class="navbar-brand" href="#">
@@ -53,6 +54,47 @@
     </div>
   </div>
 </nav>
+
+<!--Carrusel-->
+
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/carrusel/view1.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>CUBIS View</h5>
+        <p>Terraza edificio ubicado de Matienzo 231, Quilmes.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="Images/carrusel/silver1.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>CUBIS Silver</h5>
+        <p>Hall edificio ubicado en Sarmiento 910, Quilmes.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="Images/carrusel/casaava.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Casa AVA</h5>
+        <p>Render linving comedor.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
     
     <!-- Script Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
