--- a/index.html
+++ b/index.html
@@ -16,43 +16,25 @@
 </head>
 <body>
   <!--Nav bar-->
- <nav class="navbar navbar-expand-lg bg-warning">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="images/logo.png" alt="" width="100" height="100">
-        </a>
-      </div>
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Home</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Nosotros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Proyectos</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Fotos
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Edificios</a></li>
-            <li><a class="dropdown-item" href="#">Casas</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Reformas</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Contacto</a>
-        </li>
-      </ul>
-     
+      <a class="navbar-brand" href="#">
+        <img src="Images/logo.jpg" alt="" width="150" height="40">
+      </a>
     </div>
-  </div>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="pages/proyectos.html">Proyectos</a>
+                <a class="nav-link" href="pages/presupuestos.html">Presupuestos</a>
+            </div>
+        </div>
+    </div>
 </nav>
 
 <!--Carrusel-->
@@ -65,21 +47,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/carrusel/view1.jpg" class="d-block w-100" alt="...">
+      <img src="images/carrusel/foto1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>CUBIS View</h5>
         <p>Terraza edificio ubicado de Matienzo 231, Quilmes.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="Images/carrusel/silver1.jpg" class="d-block w-100" alt="...">
+      <img src="Images/carrusel/foto2.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>CUBIS Silver</h5>
         <p>Hall edificio ubicado en Sarmiento 910, Quilmes.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="Images/carrusel/casaava.jpg" class="d-block w-100" alt="...">
+      <img src="Images/carrusel/foto3.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Casa AVA</h5>
         <p>Render linving comedor.</p>
