--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -33,33 +33,48 @@
                 </div>
             </div>
         </div>
-    </nav>
-    <div class="card" style="width: 18rem;">
-        <img src="../Images/proyectos/proyecto1.jpeg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+    </nav >
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="col">
+        <div class="card">
+          <img src="../Images/proyectos/proyecto1.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Casa CUBIS</h5>
+            <p class="card-text">En el Barrio ¨El Faro¨ de Carmelo. En el medio del Bosque y pegada al Rí­o de la Plata .
+              Diseñada para ser disfrutada todo el año. Lugar convocante para la familia completa.</p>
+          </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="../Images/proyectos/proyecto2.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="col">
+        <div class="card">
+          <img src="../Images/proyectos/proyecto2.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Casa SILVER</h5>
+            <p class="card-text">Torres con unidades de 2,3,4 ambientess y dúplex de 3 ambientes, con sector parrillero y solárium en la azotea.</p>
+          </div>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="../Images/proyectos/proyecto3.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="col">
+        <div class="card">
+          <img src="../Images/proyectos/proyecto3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Casa AVA</h5>
+            <p class="card-text">En esta casa de 350 m2 incorporamos sistemas de eficiencia y ahorro energético.
+              La climatización geotérmica es un sistema de acondicionamiento (calefacción y refrigeración).</p>
+          </div>
         </div>
       </div>
-
-
+      <div class="col">
+        <div class="card">
+          <img src="../Images/proyectos/proyecto4.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Casa SATELA</h5>
+            <p class="card-text">Ubicada en el barrio náutico CUBE de Escobar.
+              Pensada como casa de fin de semana para reunir a la familia completa.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     
