--- a/pages/presupuestos.html
+++ b/pages/presupuestos.html
@@ -44,7 +44,7 @@
                         <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre" autofocus />
                     </div>
                     <div class="mb-3">
-                        <label for="descripcion" class="form-label">solicitud</label>
+                        <label for="descripcion" class="form-label">Solicitud</label>
                         <textarea class="form-control" id="descripcion" placeholder="Detalles" rows="3"></textarea>
                     </div>
                     <div class="mb-3">
@@ -52,7 +52,7 @@
                         <input type="number" class="form-control" id="programadores" />
                     </div>
                     <div class="d-grid gap-2">
-                        <button class="btn btn-primary">Guardar</button>
+                        <button class="btn btn-primary">Enviar</button>
                         <button class="btn btn-secondary">Limpiar</button>
                     </div>
                 </form>
